--- a/_posts/2024-05-23-T480_Guix.html
+++ b/_posts/2024-05-23-T480_Guix.html
@@ -141,7 +141,7 @@ Overall I was able to get Guix running pretty much perfectly on this hardware. W
 <div id="text-footnotes">
 
 <div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1" role="doc-backlink">1</a></sup> <div class="footpara" role="doc-footnote"><p class="footpara">
-: Substitutes are prebuilt package derivations, used to avoid compiling software locally.
+Substitutes are prebuilt package derivations, used to avoid compiling software locally.
 </p></div></div>
 
 
