--- a/_posts/2024-05-23-T480_Guix.html
+++ b/_posts/2024-05-23-T480_Guix.html
@@ -88,7 +88,7 @@ I allowed auto-login with GDM and also added the services for <code>tlp</code> (
 <h3 id="orged2210f">CPU throttling</h3>
 <div class="outline-text-3" id="text-orged2210f">
 <p>
-The T480 has a firmware bug which leads the the CPU throttling heavily (at about 70°C). This seriously impacts performance. 
+The T480 has a firmware bug which leads the the CPU throttling heavily (at about 70°C). This quite seriously impacts performance. 
 Fortunately there is a tool called <a href="https://github.com/erpalma/throttled">throttled</a> which can be used to work around this issue. Unfortunately, this tool isn't available for Guix, so I ended up hacking together my own solution. 
 I added a small shell script into the program's directory and start it automatically at boot. The proper solution would be to package the service for Guix, but I think I'll leave that to future me.
 </p>
